Add endpoint to get all available for trading entities
